Kubernetes/react-event-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-event-deploy-latest
  namespace: caps
spec:
  selector:
    matchLabels:
      app: react-event-app-latest
  template:
    metadata:
      labels:
        app: react-event-app-latest
    spec:
      containers:
        - name: react-event-app-latest
          image: 026090548352.dkr.ecr.us-east-1.amazonaws.com/capstone-frontend:latest
          ports:
            - containerPort: 80
