Kubernetes/springboot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deploy
spec:
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: 026090548352.dkr.ecr.us-east-1.amazonaws.com/capstone-backend:latest
          ports:
            - containerPort: 80
