Kubernetes/java-springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: spring-boot-app
