Kubernetes/react-event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-event-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    app: react-event-app-latest
